src/app/components/mainNav.module.css
.mainNav {
  display: grid;
  grid-template-columns: auto minmax(0, 1fr);
  grid-template-areas: 'sidebar content';
  /* view height minus header */
  height: calc(100vh - 60px);
  max-width: calc(var(--max-sidebar-width) + var(--max-content-width));
  margin: 0 auto;
}

.mainNav nav {
  max-width: var(--max-sidebar-width);
}

